fix(docs): improve highlighted code readability

--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -90,3 +90,8 @@ body.body--autocomplete-open .sidebar-container .collapse {
   animation-iteration-count: infinite;
   animation-name: bounce;
 }
+/* Fix search highlight inside code blocks - yellow on dark background is illegible*/
+div[class^="highlight"] .hll{
+    background-color: rgba(255, 255, 0, 0.25);
+    color: inherit;
+}
